fix: sonarcloud fixes